--- a/Client/src/videoControls/videoControls.css
+++ b/Client/src/videoControls/videoControls.css
@@ -3,3 +3,38 @@
 
     width: 100%;
 }
+
+.slider-container {
+    display: inline-block;
+}
+
+.sliders {
+    -webkit-appearance: none;
+    width: 75%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.sliders:hover {
+    opacity: 1;
+}
+
+.sliders::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.noVideos {
+    position: absolute;
+    top: 55px;
+}
