--- a/Client/src/videoControls/videoControls.css
+++ b/Client/src/videoControls/videoControls.css
@@ -1,11 +1,14 @@
 .containerControl {
+
     position: relative;
 
     width: 100%;
 }
 
 .slider-container {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sliders {
