--- a/Client/src/VideoQueue/VideoQueue.css
+++ b/Client/src/VideoQueue/VideoQueue.css
@@ -28,3 +28,15 @@
     height: auto;
     width: 168px
 }
+
+.backToRoom {
+    cursor: pointer;
+}
+
+.backToRoom:hover {
+    color: gray
+}
+
+.backToRoom:hover>.fa-angle-left {
+    transform: translateX(-2px);
+}
