fixed data base issue and added icons

--- a/Client/src/VideoQueue/VideoQueue.css
+++ b/Client/src/VideoQueue/VideoQueue.css
@@ -31,7 +31,10 @@
 }
 
 .backToRoom {
+    display: flex;
     cursor: pointer;
+    justify-content: left;
+    align-items: center;
 }
 
 .backToRoom:hover {
