--- a/Client/src/Rooms/Rooms.css
+++ b/Client/src/Rooms/Rooms.css
@@ -1,3 +1,22 @@
-.pointer:hover{
+.pointer:hover {
     cursor: pointer;
+}
+
+.pointer {
+    background-color: #343a40 !important;
+
+}
+
+.mainRoom {
+
+    min-height: 100vh;
+    background-color: #212529;
+    color: whitesmoke;
+}
+
+.titleAreaRoom {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
 }
