fixed add to queue button

--- a/Client/src/VideoQueue/VideoQueue.css
+++ b/Client/src/VideoQueue/VideoQueue.css
@@ -44,3 +44,12 @@
 .backToRoom:hover>.fa-angle-left {
     transform: translateX(-2px);
 }
+
+.queueButton:hover {
+    cursor: pointer !important;
+}
+
+.queueButton:active {
+    background-color: #666869;
+    color: whitesmoke
+}
